add getStream api implementation
